@@ -637,7 +637,7 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 			</thead>
 			<tr>
 				<td>Text search</td>
-				<td>Search Title and Description fields within all published IATI activities.</td>
+				<td>Search <b>all</b> narrative fields of <b><i>any</i></b> languages within all published IATI activities.</td>
 			</tr>
 			<tr>
 				<td>ABC - 123</td>
