@@ -1,6 +1,13 @@
+Development Portal (2022-03-22 shi)
+==============================
+Update Freetext glossary in search
+Update view_search glossary chunk now in general
+
+
 Development Portal (2022-03-10 shi)
 ==============================
 Update search input font size
+
 
 Development Portal (2022-02-01 shi)
 ==============================
